--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,25 +1,21 @@
-<div class ="row topMargin">
+<div class="row topMargin">
   <div class="col-md-3 "></div>
   <div class="col-md-6 ">
     <div class="card text-center">
       <div class="card-header">
         LOGIN
       </div>
-      <div class="card-body">
-        <form>
+        <div class="card-body">
           <div class="form-group">
-            <label for="exampleInputEmail1">Email address</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+            <label for="loginEmail">Email address</label>
+            <input type="email" class="form-control" [(ngModel)]="email" name ="email" placeholder="Enter email">
           </div>
           <div class="form-group">
-            <label for="exampleInputPassword1">Password</label>
-            <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+            <label for="loginPostId">Post ID</label>
+            <input type="integer" class="form-control" [(ngModel)]="postId" name ="psotId" placeholder="post id">
           </div>
-          <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
-      </div>
-     
+          <button (click)="login(email, postId)" class="btn btn-primary">Click me!</button>
+        </div>
     </div>
   </div>
 </div>
-
