--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,3 +1,6 @@
-<p>
-  dashboard works!
-</p>
+<div class="card"  *ngFor="let item of employeeList" style="margin:5px">
+  <div class="card-body">
+  <div><b>BODY: </b>{{item.body}}</div>
+  <div><b>TITLE: </b>{{item.title}}</div>
+  </div>
+</div>
